Revert IAC styling tweaks as they have issues on mobile

--- a/public/css/respondent.css
+++ b/public/css/respondent.css
@@ -141,9 +141,5 @@
 }
 
 #census-access-code .field input{
-  font-size: 1.5rem;
-  text-align: center;
-  letter-spacing: 0.7rem;
-  padding-left: 1.2rem;
-  font-family: monaco, Consolas, "Lucida Console", monospace;
+  -ms-flex: 0 1 auto;
 }
